--- a/Session 6/Bai6Basic.html
+++ b/Session 6/Bai6Basic.html
@@ -15,8 +15,7 @@
             <img src="images/almond.jpg" alt="banner" class="img-product">
             <div class="content-top">
                 <h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    pppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppLorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </h3>
                 <div class="user">
                     <img src="images/user.jpg" alt="avatar" class="avatar">
@@ -39,7 +38,6 @@
             <img src="images/asparagus.jpg" alt="banner" class="img-product">
             <div class="content-top">
                 <h3>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </h3>
                 <div class="user">
