--- a/Session 10/demoForm01.html
+++ b/Session 10/demoForm01.html
@@ -37,7 +37,7 @@
         <legend>
             <h2>Registration Form</h2>
         </legend>
-        <form action="http://google.com">
+        <form action="http://google.com" method="get/post">
             <div class="row">
                 <label>StudentID *</label>
                 <input type="text" placeholder="Input your ID" required>
