--- a/Demo Bootstrap/index.html
+++ b/Demo Bootstrap/index.html
@@ -58,6 +58,9 @@
                     </div>
                   </form>
                 <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span>
+                  <b id="count">0</b>
+                  </a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
@@ -106,7 +109,7 @@
                     <img src="images/cashews.jpg" alt="products">
                     <h3 class="text-primary">Product 01</h3>
                     <p class="text-danger">15$</p>
-                    <button class="btn btn-success">Add to Cart</button>
+                    <button class="btn btn-success add">Add to Cart</button>
                 </div>
             </div>
             <div class="col-md-3 hidden-sm">
@@ -114,7 +117,7 @@
                     <img src="images/chayote.jpg" alt="products">
                     <h3 class="text-primary">Product 02</h3>
                     <p class="text-danger">15$</p>
-                    <button class="btn btn-warning">Add to Cart</button>
+                    <button class="btn btn-warning add">Add to Cart</button>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -122,7 +125,7 @@
                     <img src="images/chickpeas.jpg" alt="products">
                     <h3 class="text-primary">Product 03</h3>
                     <p class="text-danger">15$</p>
-                    <button class="btn btn-info">Add to Cart</button>
+                    <button class="btn btn-info add">Add to Cart</button>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -130,7 +133,7 @@
                     <img src="images/cinnamon.jpg" alt="products">
                     <h3 class="text-primary">Product 04</h3>
                     <p class="text-danger">15$</p>
-                    <button class="btn btn-success">Add to Cart</button>
+                    <button class="btn btn-success add">Add to Cart</button>
                 </div>
             </div>
         </div>
